@@ -68,3 +68,11 @@ include $(top_srcdir)/tests/gtk-doc.make
 # e.g. EXTRA_DIST += version.xml.in
 EXTRA_DIST +=
 
+DISTCLEANFILES = \
+	gtkdoc-scan.log \
+	gtkdoc-scangobj.log \
+	gtkdoc-mktmpl.log \
+	gtkdoc-mkdb.log \
+	gtkdoc-mkhtml.log \
+	gtkdoc-fixxref.log
+
