@@ -38,6 +38,7 @@ GTK-Doc 1.9     (XXX XX 2007)
  o 471014 : G_CONST_RETURN * G_CONST_RETURN * function not picked up
  o 477532 : function variables
  o 479913 : gtk-doc.notmpl.make is not distributed
+ o 479923 : distclean test output properly
 
  Contributors
 
