@@ -1,5 +1,15 @@
 2007-09-24  Stefan Kost  <ensonic@users.sf.net>
 
+	patch by: David Nečas <yeti@physics.muni.cz>
+
+	* NEWS:
+	* tests/bugs/docs/Makefile.am:
+	* tests/gobject/docs/Makefile.am:
+	* tests/gtk-doc.make:
+	  Adapt xml/ cleaning from gtk-doc.notmpl.make.  Clean log files.
+
+2007-09-24  Stefan Kost  <ensonic@users.sf.net>
+
 	* NEWS:
 	  Current release notes.
 
